# Siemens-5G-Final-Project

./: .gitignore  CMakeLists.txt  CRC.cpp  Packet.cpp  Packet.h  Program.cpp  README.md  config.txt  configurations.cpp  configurations.h  main.cpp  out.txt  out.txt.json  output.txt  output.txt.json  parser.cpp  parser.h  program.h
